# Personal-assistent

./: .env.example  .gitignore  AGENT_SETUP_HANDOFF.md  README.md  pyproject.toml
app/: __init__.py  main.py
app/api/: routes.py
app/core/: config.py  database.py
app/domain/: enums.py  models.py  schemas.py
app/services/: bootstrap.py  confirmation.py  domain_logic.py  ingestion.py  interpretation.py  query_service.py  whatsapp.py  whatsapp_flow.py
docs/: architecture.md  domain-rules.md  roadmap.md
tests/: test_query_service.py  test_whatsapp_webhook_schema.py
